--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-navbar></app-navbar>
 
 <main>
- <app-home></app-home>
+ <!-- <app-home></app-home> -->
+  <router-outlet></router-outlet>
 </main>
 
 <!-- <footer class="bg-light py-4 mt-5">
